Adds simple working mvc db app

--- a/Exercises/webdev/MvcMovie/appsettings.json
+++ b/Exercises/webdev/MvcMovie/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Data Source=DESKTOP-QUFV2CS\\SQLEXPRESS;Database=MvcMovieContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
