--- a/p0-pipelines.yml
+++ b/p0-pipelines.yml
@@ -32,17 +32,14 @@ steps:
   inputs:
     projects: 'Projects/p0/p0/*.sln'
 
-#Your build pipeline references the ‘BuildPlatform’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
-#Your build pipeline references the ‘BuildConfiguration’ variable, which you’ve selected to be settable at queue time. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it settable at queue time. See https://go.microsoft.com/fwlink/?linkid=865971
-
 - task: VSTest@2
   displayName: 'VsTest - testAssemblies'
   inputs:
     testAssemblyVer2: 'Projects\p0\p0_test\bin\Debug\netcoreapp3.1\p0_test.dll'
     resultsFolder: 'D:\a\1\TestResults'
     codeCoverageEnabled: true
-    platform: '$(BuildPlatform)'
-    configuration: '$(BuildConfiguration)'
+    # platform: '$(BuildPlatform)'
+    # configuration: '$(BuildConfiguration)'
 
 - task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
   displayName: 'Run Code Analysis'
