--- a/p0-pipelines.yml
+++ b/p0-pipelines.yml
@@ -20,12 +20,12 @@ steps:
   inputs:
     versionSpec: 4.4.1
 
-- task: SonarSource.sonarcloud.14d9cde6-c1da-4d55-aa01-2965cd301255.SonarCloudPrepare@1
+- task: SonarCloudPrepare@1
   displayName: 'Prepare analysis on SonarCloud'
   inputs:
     SonarCloud: steve
     organization: some-new
-    projectKey: somen-new-key
+    projectKey: some-new-key
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build'
@@ -41,8 +41,8 @@ steps:
     platform: '$(BuildPlatform)'
     configuration: '$(BuildConfiguration)'
 
-- task: SonarSource.sonarcloud.ce096e50-6155-4de8-8800-4221aaeed4a1.SonarCloudAnalyze@1
+- task: SonarCloudAnalyze@1
   displayName: 'Run Code Analysis'
 
-- task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
+- task: SonarCloudPublish@1
   displayName: 'Publish Quality Gate Result'
